# goit-web-hw-07

homework7.1_poetry/: alembic.ini  models.py  my_select.py  pyproject.toml  seed.py
homework7.1_poetry/alembic/versions/: d7442df00235_initial_migration.py
