[tool.poetry]
name = "homework7-1-poetry"
version = "0.1.0"
description = ""
authors = ["YuriiOdynets <yuriiodynets@gmail.com>"]
readme = "README.md"
packages = [{include = "homework7"}]

[tool.poetry.dependencies]
python = "^3.12"
faker = "^26.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
